clusters/production/external-servers/pterodactyl/wing-0/endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pterodactyl-wing-0-slice
  labels:
    kubernetes.io/service-name: pterodactyl-wing-0
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8080
endpoints:
  - addresses:
      - "192.168.4.139"
    conditions:
      ready: true
