clusters/production/external-servers/pterodactyl/wing-0/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl-wing-0
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
